syntax = "proto3";

package quiz;

import "google/protobuf/timestamp.proto";

option go_package="github.com/elangreza14/grpc-quiz/quiz";

service Quiz {
    rpc Register(RegisterRequest) returns (Message) {}
    rpc Stream(stream Message) returns (stream StreamResponse) {}
}

message RegisterRequest {
    string player = 1;
}

message Message {
    string message = 1;
}

message Shutdown {}

message StreamResponse {
    google.protobuf.Timestamp timestamp = 1;

    oneof event {
        Shutdown server_shutdown = 2;
        Message  server_announcement  = 3;
    }
}
